--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,9 +31,11 @@ include_directories(${WIRINGPI_INCLUDE_DIRS})
 
 # Declare the executable target built from your sources
 add_executable(main main.cpp linhas.h)
+add_executable(main2 main2.cpp linhas.h)
 
 #find_library(WIRINGPI_LIBRARIES NAMES wiringPi)
 
 # Link your application with OpenCV libraries
 target_link_libraries(main ${OpenCV_LIBS})
+target_link_libraries(main2 ${OpenCV_LIBS})
 #target_link_libraries(testesFURG ${WIRINGPI_LIBRARIES}) 
