--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,24 +33,32 @@ include_directories(${WIRINGPI_INCLUDE_DIRS})
 add_executable(antigo antigo.cpp linhas.h)
 add_executable(main main.cpp linhas.h)
 add_executable(main2 main2.cpp linhas.h)
-add_executable(main3 main3.cpp linhas.h)
+#add_executable(main3 main3.cpp linhas.h)
 add_executable(main4 main4.cpp linhas.h)
 add_executable(main_imagens main_imagens.cpp linhas.h)
 add_executable(main2_imagens main2_imagens.cpp linhas.h)
-add_executable(main3_imagens main3_imagens.cpp linhas.h)
+#add_executable(main3_imagens main3_imagens.cpp linhas.h)
 add_executable(main4_imagens main4_imagens.cpp linhas.h)
 add_executable(antigo_imagens antigo_imagens.cpp linhas.h)
+add_executable(antigo_loop antigo_loop.cpp linhas.h)
+add_executable(main_loop main_loop.cpp linhas.h)
+add_executable(main2_loop main2_loop.cpp linhas.h)
+add_executable(main4_loop main4_loop.cpp linhas.h)
 #find_library(WIRINGPI_LIBRARIES NAMES wiringPi)
 
 # Link your application with OpenCV libraries
 target_link_libraries(antigo ${OpenCV_LIBS})
 target_link_libraries(main ${OpenCV_LIBS})
 target_link_libraries(main2 ${OpenCV_LIBS})
-target_link_libraries(main3 ${OpenCV_LIBS})
+#target_link_libraries(main3 ${OpenCV_LIBS})
 target_link_libraries(main4 ${OpenCV_LIBS})
 target_link_libraries(main_imagens ${OpenCV_LIBS})
 target_link_libraries(main2_imagens ${OpenCV_LIBS})
-target_link_libraries(main3_imagens ${OpenCV_LIBS})
+#target_link_libraries(main3_imagens ${OpenCV_LIBS})
 target_link_libraries(main4_imagens ${OpenCV_LIBS})
 target_link_libraries(antigo_imagens ${OpenCV_LIBS})
+target_link_libraries(antigo_loop ${OpenCV_LIBS})
+target_link_libraries(main_loop ${OpenCV_LIBS})
+target_link_libraries(main2_loop ${OpenCV_LIBS})
+target_link_libraries(main4_loop ${OpenCV_LIBS})
 #target_link_libraries(testesFURG ${WIRINGPI_LIBRARIES}) 
