--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ include_directories(${WIRINGPI_INCLUDE_DIRS})
 
 # Declare the executable target built from your sources
 add_executable(antigo antigo.cpp linhas.h)
+#add_executable(teste teste.cpp linhas.h)
 add_executable(main main.cpp linhas.h)
 add_executable(main2 main2.cpp linhas.h)
 #add_executable(main3 main3.cpp linhas.h)
@@ -48,6 +49,7 @@ add_executable(main4_loop main4_loop.cpp linhas.h)
 
 # Link your application with OpenCV libraries
 target_link_libraries(antigo ${OpenCV_LIBS})
+#target_link_libraries(teste ${OpenCV_LIBS})
 target_link_libraries(main ${OpenCV_LIBS})
 target_link_libraries(main2 ${OpenCV_LIBS})
 #target_link_libraries(main3 ${OpenCV_LIBS})
