--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(main2 main2.cpp linhas.h)
 #add_executable(main3 main3.cpp linhas.h)
 add_executable(main4 main4.cpp linhas.h)
 add_executable(main5 main5.cpp linhas.h)
+add_executable(main7 main7.cpp linhas.h)
 add_executable(main1_imagens main1_imagens.cpp linhas.h)
 add_executable(main2_imagens main2_imagens.cpp linhas.h)
 add_executable(main3_imagens main3_imagens.cpp linhas.h)
@@ -57,6 +58,7 @@ target_link_libraries(main2 ${OpenCV_LIBS})
 #target_link_libraries(main3 ${OpenCV_LIBS})
 target_link_libraries(main4 ${OpenCV_LIBS})
 target_link_libraries(main5 ${OpenCV_LIBS})
+target_link_libraries(main7 ${OpenCV_LIBS})
 target_link_libraries(main1_imagens ${OpenCV_LIBS})
 target_link_libraries(main2_imagens ${OpenCV_LIBS})
 target_link_libraries(main3_imagens ${OpenCV_LIBS})
